--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing Page | Odin Project</title>
-    <link rel="stylesheet" href="/css.css" />
+    <link rel="stylesheet" href="css.css" />
   </head>
   <body>
     <header>
@@ -35,7 +35,7 @@
         <div>
           <img
             class="header-img"
-            src="/dec.webp"
+            src="./dec.webp"
             alt="Our Decoretion Image"
           />
         </div>
@@ -48,7 +48,7 @@
         </div>
         <div class="container2">
           <div class="box">
-            <img src="/gift1.webp" alt="" />
+            <img src="./gift1.webp" alt="" />
             <figcaption>
               We have different wraped Boxes <br />
               so, you may click on to see <br />
@@ -56,7 +56,7 @@
             </figcaption>
           </div>
           <div class="box">
-            <img src="/gift2.jpg" alt="" />
+            <img src="./gift2.jpg" alt="" />
             <figcaption>
               This is how Boxes wraped <br />
               so, you may click on to see <br />
@@ -64,7 +64,7 @@
             </figcaption>
           </div>
           <div class="box">
-            <img src="/gift3.jpeg" alt="" />
+            <img src="./gift3.jpeg" alt="" />
             <figcaption>
               Here is combination of different <br />
               culture aplayed to prepare <br />
@@ -72,7 +72,7 @@
             </figcaption>
           </div>
           <div class="box">
-            <img src="/gift4.webp" alt="" />
+            <img src="./gift4.webp" alt="" />
             <figcaption>
               We have different Tools & <br />
               mordern styles used in<br />
